force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubscribetolightningreports__c.field-meta.xml
<CustomField>
    <fullName>permissionssubscribetolightningreports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubscribetolightningreports</externalDeveloperName>
    <label>Subscribe to Reports</label>
    <type>Checkbox</type>
</CustomField>