force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionstransferanycase__c.field-meta.xml
<CustomField>
    <fullName>permissionstransferanycase__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionstransferanycase</externalDeveloperName>
    <label>Transfer Cases</label>
    <type>Checkbox</type>
</CustomField>