force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionstransferanyentity__c.field-meta.xml
<CustomField>
    <fullName>permissionstransferanyentity__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionstransferanyentity</externalDeveloperName>
    <label>Transfer Record</label>
    <type>Checkbox</type>
</CustomField>