force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionstransferanylead__c.field-meta.xml
<CustomField>
    <fullName>permissionstransferanylead__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionstransferanylead</externalDeveloperName>
    <label>Transfer Leads</label>
    <type>Checkbox</type>
</CustomField>