force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionstwofactorapi__c.field-meta.xml
<CustomField>
    <fullName>permissionstwofactorapi__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionstwofactorapi</externalDeveloperName>
    <label>Two-Factor Authentication for API Logins</label>
    <type>Checkbox</type>
</CustomField>