force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsuseteamreassignwizards__c.field-meta.xml
<CustomField>
    <fullName>permissionsuseteamreassignwizards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsuseteamreassignwizards</externalDeveloperName>
    <label>Use Team Reassignment Wizards</label>
    <type>Checkbox</type>
</CustomField>