force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsusetemplatedapp__c.field-meta.xml
<CustomField>
    <fullName>permissionsusetemplatedapp__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsusetemplatedapp</externalDeveloperName>
    <label>Use Analytics Templated Apps</label>
    <type>Checkbox</type>
</CustomField>