force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsuseweblink__c.field-meta.xml
<CustomField>
    <fullName>permissionsuseweblink__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsuseweblink</externalDeveloperName>
    <label>Allow Access to Customized Actions</label>
    <type>Checkbox</type>
</CustomField>