force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewallactivities__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewallactivities__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewallactivities</externalDeveloperName>
    <label>View All Activities</label>
    <type>Checkbox</type>
</CustomField>