force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewalldata__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewalldata__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewalldata</externalDeveloperName>
    <label>View All Data</label>
    <type>Checkbox</type>
</CustomField>