force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewallusers__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewallusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewallusers</externalDeveloperName>
    <label>View All Users</label>
    <type>Checkbox</type>
</CustomField>