force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewcontent__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewcontent__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewcontent</externalDeveloperName>
    <label>View Content in Portals</label>
    <type>Checkbox</type>
</CustomField>