force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewdataassessment__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewdataassessment__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewdataassessment</externalDeveloperName>
    <label>Access to view Data Assessment</label>
    <type>Checkbox</type>
</CustomField>