force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewdatacategories__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewdatacategories__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewdatacategories</externalDeveloperName>
    <label>View Data Categories in Setup</label>
    <type>Checkbox</type>
</CustomField>