force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewencrypteddata__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewencrypteddata__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewencrypteddata</externalDeveloperName>
    <label>View Encrypted Data</label>
    <type>Checkbox</type>
</CustomField>