force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsvieweventlogfiles__c.field-meta.xml
<CustomField>
    <fullName>permissionsvieweventlogfiles__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsvieweventlogfiles</externalDeveloperName>
    <label>View Event Log Files</label>
    <type>Checkbox</type>
</CustomField>