force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewhealthcheck__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewhealthcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewhealthcheck</externalDeveloperName>
    <label>View Health Check</label>
    <type>Checkbox</type>
</CustomField>