force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewhelplink__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewhelplink__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewhelplink</externalDeveloperName>
    <label>View Help Link</label>
    <type>Checkbox</type>
</CustomField>