force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewmyteamsdashboards__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewmyteamsdashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewmyteamsdashboards</externalDeveloperName>
    <label>View My Team&#39;s Dashboards</label>
    <type>Checkbox</type>
</CustomField>