force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewonlyembeddedappuser__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewonlyembeddedappuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewonlyembeddedappuser</externalDeveloperName>
    <label>Access to View-Only Licensed Templates a</label>
    <type>Checkbox</type>
</CustomField>