force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewpublicdashboards__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewpublicdashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewpublicdashboards</externalDeveloperName>
    <label>View Dashboards in Public Folders</label>
    <type>Checkbox</type>
</CustomField>