force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewpublicreports__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewpublicreports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewpublicreports</externalDeveloperName>
    <label>View Reports in Public Folders</label>
    <type>Checkbox</type>
</CustomField>