force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewroles__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewroles__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewroles</externalDeveloperName>
    <label>View Roles and Role Hierarchy</label>
    <type>Checkbox</type>
</CustomField>