force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsviewsetup__c.field-meta.xml
<CustomField>
    <fullName>permissionsviewsetup__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsviewsetup</externalDeveloperName>
    <label>View Setup and Configuration</label>
    <type>Checkbox</type>
</CustomField>