force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionswavetabulardownload__c.field-meta.xml
<CustomField>
    <fullName>permissionswavetabulardownload__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionswavetabulardownload</externalDeveloperName>
    <label>Download Analytics Data</label>
    <type>Checkbox</type>
</CustomField>