force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsworkcalibrationuser__c.field-meta.xml
<CustomField>
    <fullName>permissionsworkcalibrationuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsworkcalibrationuser</externalDeveloperName>
    <label>Enable Work.com Calibration</label>
    <type>Checkbox</type>
</CustomField>