force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsworkdotcomuserperm__c.field-meta.xml
<CustomField>
    <fullName>permissionsworkdotcomuserperm__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsworkdotcomuserperm</externalDeveloperName>
    <label>Enable Work.com</label>
    <type>Checkbox</type>
</CustomField>