force-app/main/default/objects/ImpossibleProfiles__x/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <externalDeveloperName>UserType</externalDeveloperName>
    <label>User Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>